<resources>
    <string name="app_name">FinFlow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="welcome_message">Welcome Back</string>
    <string name="guide_message">Sign in to continue to FinFlow</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="sign_in">Sign In</string>
    <string name="continue_as_guest">Continue as Guest</string>
    <string name="welcome_header">Welcome</string>
    <string name="total_stock">موجودی کل</string>
    <string name="quick_access">دسترسی سریع</string>
    <string name="saving">پس انداز</string>
    <string name="this_month_cost">هزینه این ماه</string>
    <string name="this_month_income">درآمد این ماه</string>
    <string name="toman">تومان</string>
    <string name="transaction">تراکنش ها</string>
    <string name="income_registration">ثبت درآمد</string>
    <string name="income">درآمد</string>
    <string name="expense">هزینه</string>
    <string name="amount">مبلغ</string>
    <string name="category">دسته بندی</string>
    <string name="transport">حمل و نقل</string>
    <string name="add_transaction">ثبت تراکنش</string>
    <string name="add_new">جدید</string>
    <string name="category_management">مدیریت دسته بندی ها </string>
</resources>